# SmartAgriculture

./: .gitignore  AGENTS.md  Gemini.md  README.md  TASKS_AND_DOCS.md  experiance  export_spectra.py  parse_inventory.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
concepts/: experience_system.md
configs/: sample_config.json
docs/: EXTENSION_DEPLOYMENT_PLAN.md
notebooks/: 01-read-hyperspectral-data.ipynb  02_model_v1.ipynb
scripts/: check_env.sh  export_spectra.py  parse_inventory.py  self_check.py  setup_env.sh  sync_data.sh
smart_agriculture/: __init__.py  cli.py
src/enzyme_tech/: __init__.py  gcs_utils.py
src/smart_agriculture/: cli.py  config.py  dataset_sync.py  features.py  inventory.py  settings.py
src/smart_agriculture/enzyme_tech/: __init__.py
src/smart_agriculture/pipelines/: gcs_utils.py
tests/: test_cli.py  test_dataset_sync.py  test_export_spectra.py  test_gcs_utils.py
tests/costing/: test_costing_env_check.py  test_costing_features.py
