[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-agriculture"
version = "0.1.0"
description = "Python toolkit starter for SmartAgriculture analytics."
authors = [{ name = "SmartAgriculture Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "scikit-learn", "matplotlib", "scipy", "spectral", "google-cloud-storage", "jupyter"]

[project.scripts]
smart-agriculture = "smart_agriculture.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["smart_agriculture", "smart_agriculture.pipelines"]

[tool.pytest.ini_options]
pythonpath = ["src"]
